[gd_scene load_steps=12 format=3 uid="uid://2x74rehsonyj"]

[ext_resource type="Texture2D" uid="uid://dpvqfdx6cvcti" path="res://assets/introduction/assets/rope-ladder.png" id="1_8llph"]
[ext_resource type="Script" uid="uid://b83cojhrkxxjd" path="res://scripts/items/ladder.gd" id="1_ma008"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sc0ob"]
atlas = ExtResource("1_8llph")
region = Rect2(0, 0, 20, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma008"]
atlas = ExtResource("1_8llph")
region = Rect2(0, 0, 20, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyypq"]
atlas = ExtResource("1_8llph")
region = Rect2(20, 0, 20, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jr5qr"]
atlas = ExtResource("1_8llph")
region = Rect2(40, 0, 20, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2ugy"]
atlas = ExtResource("1_8llph")
region = Rect2(60, 0, 20, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpcpm"]
atlas = ExtResource("1_8llph")
region = Rect2(80, 0, 20, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_sc0ob"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc0ob")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma008")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyypq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jr5qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2ugy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpcpm")
}],
"loop": false,
"name": &"drop_down",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8llph"]
size = Vector2(28, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ma008"]
size = Vector2(30, 195.5)

[node name="Ladder" type="Node2D"]
script = ExtResource("1_ma008")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, 86)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_sc0ob")
animation = &"drop_down"
frame = 4
frame_progress = 0.97310114

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="InteractCollision" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(1, -3)
shape = SubResource("RectangleShape2D_8llph")

[node name="ClimbArea" type="Area2D" parent="." groups=["climbable"]]
collision_layer = 16
collision_mask = 2

[node name="ClimbCollision" type="CollisionShape2D" parent="ClimbArea"]
position = Vector2(-5, 87.75)
shape = SubResource("RectangleShape2D_ma008")
disabled = true
debug_color = Color(0, 0.6506858, 0.09628127, 0.41960785)
